--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.5",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "lucide-react": "^0.312.0",
-    "npm": "^10.3.0",
+    "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.3",
+    "react-tabs": "^6.0.2",
     "socket.io-client": "^4.7.4",
     "zustand": "^4.5.0"
   },
