--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cookie-parser": "^1.4.6",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "google-auth-library": "^9.6.3",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.3",
     "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
   },
