--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.4.1",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.3",
+    "react-select": "^5.8.0",
     "react-tabs": "^6.0.2",
     "socket.io-client": "^4.7.4",
     "zustand": "^4.5.0"
