--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.3",
