--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.312.0",
     "npm": "^10.4.0",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
